--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Leap Day theme
-description: Leap Day is a theme for GitHub Pages.
+title: 桃桃
+description: 桃桃，祂是至高无上的神.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-leap-day
