--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 桃桃
-description: 桃桃，祂是至高无上的神.
+description: 神之可爱的桃桃，祂至高无上.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-leap-day
